tests/ui/traits/negative-bounds/negative-sizeofval.next.stderr
error[E0277]: the trait bound `T: !SizeOfVal` is not satisfied
  --> $DIR/negative-sizeofval.rs:12:11
   |
LL |     foo::<T>();
   |           ^ the trait bound `T: !SizeOfVal` is not satisfied
   |
note: required by a bound in `foo`
  --> $DIR/negative-sizeofval.rs:9:11
   |
LL | fn foo<T: !SizeOfVal>() {}
   |           ^^^^^^^^^^ required by this bound in `foo`

error[E0277]: the trait bound `(): !SizeOfVal` is not satisfied
  --> $DIR/negative-sizeofval.rs:17:11
   |
LL |     foo::<()>();
   |           ^^ the trait bound `(): !SizeOfVal` is not satisfied
   |
note: required by a bound in `foo`
  --> $DIR/negative-sizeofval.rs:9:11
   |
LL | fn foo<T: !SizeOfVal>() {}
   |           ^^^^^^^^^^ required by this bound in `foo`

error[E0277]: the trait bound `str: !SizeOfVal` is not satisfied
  --> $DIR/negative-sizeofval.rs:19:11
   |
LL |     foo::<str>();
   |           ^^^ the trait bound `str: !SizeOfVal` is not satisfied
   |
note: required by a bound in `foo`
  --> $DIR/negative-sizeofval.rs:9:11
   |
LL | fn foo<T: !SizeOfVal>() {}
   |           ^^^^^^^^^^ required by this bound in `foo`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
